# esp32-photoframe

./: .gitignore  CMakeLists.txt  Makefile  POWER_STABILITY_FIX.md  README.md  build.py  generate_manifests.py  index.html  manifest-dev.json  manifest.json  note  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.dev  sdkconfig.defaults.seeedstudio_reterminal_e1002  sdkconfig.defaults.seeedstudio_xiao_ee02  sdkconfig.defaults.seeedstudio_xiao_ee04  sdkconfig.defaults.waveshare_photopainter_73
.githooks/: pre-commit
.github/workflows/: build.yml  ci.yml
assets/: browser-Cc9cYWat.js  exif-reader-DyFCOyax.js  index-DlR262DC.js  index-demo-Di6fkJY9.js  index-demo-H2Kn_NVE.css
boards/: boards.json  sdkconfig.defaults.seeedstudio_reterminal_e1003  sdkconfig.defaults.seeedstudio_reterminal_e1004  sdkconfig.defaults.waveshare_photopainter_73
components/axpPower/: CMakeLists.txt  axp_prot.cpp  axp_prot.h
components/board_hal/: CMakeLists.txt  Kconfig
components/board_hal/include/: battery_adc.h  board_hal.h  board_seeedstudio_reterminal_e1002.h  board_seeedstudio_reterminal_e1003.h  board_seeedstudio_reterminal_e1004.h  board_seeedstudio_xiao_ee02.h  board_seeedstudio_xiao_ee04.h  board_waveshare_photopainter_73.h
components/board_hal/src/: battery_adc.c  driver_seeedstudio_reterminal_e1002.c  driver_seeedstudio_reterminal_e1003.c  driver_seeedstudio_reterminal_e1004.c  driver_seeedstudio_xiao_ee02.c  driver_seeedstudio_xiao_ee04.c  driver_waveshare_photopainter_73.c
components/charger_driver_sy6974b/: CMakeLists.txt
components/epaper_driver_ed2208_nca/: CMakeLists.txt  Kconfig
components/epaper_driver_el073tf1u5/: CMakeLists.txt  Kconfig
components/epaper_driver_el133uf1/: CMakeLists.txt  Kconfig
components/epaper_driver_it8951/: CMakeLists.txt  Kconfig
components/epaper_port/: CMakeLists.txt  Kconfig
components/epaper_port/include/: epaper_port.h
components/epaper_port/src/: driver_seeedstudio_t133a01.c  driver_seeedstudio_xiao_ee02.c  driver_spectra_e6.c  driver_waveshare_7in3.c
components/epaper_src/: GUI_BMPfile.c  GUI_PNGfile.c  GUI_Paint.c  GUI_Paint.h
docs/: API.md  DEV.md  MEASURED_PALETTE.md  index.html  remote_gallery_plan.md
host_tests/: CMakeLists.txt  test_cron.cpp  test_utils.cpp  test_wake_schedule.cpp
main/: CMakeLists.txt  ai_manager.c  ai_manager.h  album_manager.c  ble_wake_service.c  ble_wake_service.h  color_palette.c  color_palette.h  config.h  config_manager.c  config_manager.h  cron.c  cron.h  debug_log.c  debug_log.h  display_manager.c  display_manager.h  ha_integration.c  ha_integration.h  http_common.c  http_common.h  http_server.c  http_server.h  image_processor.c  image_processor.h  main.c  network_fetcher.c  network_fetcher.h  ota_manager.c  ota_manager.h  png_decoder.c  power_manager.c  power_manager.h  processing_settings.c  processing_settings.h  remote_gallery.c  remote_gallery.h  splash_screen.c  splash_screen.h  storage.c  (+8 more)
process-cli/: .npmignore  README.md  cli.js  image-processor.js  package-lock.json  package.json  photoframe_process.py  server.js  utils.js
process-cli-docker/: .env  DOCKER.md  Dockerfile  docker-compose.yml  run-processing.sh
scripts/: boards.py  generate_manifests.py  generate_partitions.py  generate_splash.py  launch_demo.py
seeedstudio_reterminal_e1002/: manifest-dev.json  manifest.json
seeedstudio_reterminal_e1003/: manifest-dev.json  manifest.json
seeedstudio_reterminal_e1004/: manifest-dev.json  manifest.json
seeedstudio_xiao_ee02/: manifest-dev.json  manifest.json
seeedstudio_xiao_ee04/: manifest-dev.json  manifest.json
webapp/: eslint.config.js  index-demo.html  index.html  package-lock.json  package.json  vite.config.demo.js  vite.config.js
(+57 files in other folders)
